# basebit

./: .gitmodules  CMakeLists.txt  conanfile.txt  todo.txt
doc/: misc_notes.txt
src/: CMakeLists.txt
src/basebit/: CMakeLists.txt
src/basebit/basebit/: CharSet.h  Charset.h  Color.h  Error.h  Resolution.h  basebit.h
src/basebit/src/: BaseBitSystem.cpp  BaseBitSystem.h  CharSet.cpp  CharSetInSurface.cpp  CharSetInSurface.h  CharSet_builtins.cpp  CharacterGrid.cpp  CharacterGrid.h  CharsetInSurface.h  Color.cpp  ContentWindow.cpp  ContentWindow.h  Renderer.cpp  Renderer.h  Resolution.cpp  SurfaceWithTexture.cpp  SurfaceWithTexture.h  basebit.cpp  error.cpp  error.h  global.cpp  global.h  utils.cpp  utils.h
src/basebit_python/: CMakeLists.txt  python_bindings.cpp
src/basebit_test/: CMakeLists.txt  Color_test.cpp
src/playground/: CMakeLists.txt  playground_main.cpp
src/sdl_util/: CMakeLists.txt
src/sdl_util/sdl_util/: event.h  sdl_unique_ptr.h  sdlcpp.h
src/sdl_util/src/: event.cpp  sdlcpp.cpp
